Added more results

--- a/.chktexrc
+++ b/.chktexrc
@@ -1,1 +1,1 @@
-CmdLine { -n1 -n2 -n3 -n8 -n11 -n12 -n13 -n18 -n24 -n25 -n26 -n32 -n37 -n39 }
+CmdLine { -n1 -n2 -n3 -n8 -n11 -n12 -n13 -n18 -n24 -n25 -n26 -n32 -n37 -n39 -n44}
